--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,113 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "DM Sans", "Helvetica";
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --color-light: #d3bff2;
+  --color-dark: #665580;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button,
+input {
+  border: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+button:hover,
+input:hover {
+  cursor: pointer;
+}
+
+button:focus,
+input:focus {
+  outline: none;
+  outline-color: transparent;
+}
+
+/* signup */
+
+.signup {
+  position: relative;
+  height: 100vh;
+  background-color: var(--color-light);
+}
+
+.signup__box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 440px;
+  width: 360px;
+  padding: 16px;
+  background-color: #f8f8f8;
+  border-radius: 16px;
+  /* box-shadow: 0 0 2px 2px #00000022; */
 }
 
-.App-link {
-  color: #61dafb;
+.signup__title {
+  padding: 4px;
+  color: #665580;
+  font-size: 48px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.signup__logo {
+  padding: 4px;
+  font-size: 20px;
+}
+
+.signup__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.signup__input {
+  margin: 8px;
+  padding: 8px;
+  width: 240px;
+  border: none;
+  border-bottom: 2px solid #d2d2d2;
+  background-color: #f8f8f8;
+  font-size: 16px;
+}
+
+.signup__input:hover {
+  border-bottom-color: var(--color-light);
+}
+
+.signup__input:focus {
+  border-bottom-color: var(--color-dark);
+}
+
+.signup__submit {
+  margin: 8px;
+  padding: 8px;
+  width: 240px;
+  background-color: var(--color-dark);
+  color: #f8f8f8;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.signup__para {
+  padding: 8px;
+  font-size: 12px;
+  color: #888888;
+}
+
+.signup__signin {
+  text-decoration: none;
+  color: #888888;
+}
+
+.signup__signin:hover {
+  text-decoration: underline;
 }
