--- a/src/App.css
+++ b/src/App.css
@@ -236,3 +236,9 @@ input:focus {
 .chat__username {
   color: #f8f8f8;
 }
+
+.chat__messages {
+  width: 100%;
+  height: 75%;
+  background-color: #dddddd;
+}
