--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;400;500&display=swap');
 
 * {
   margin: 0;
   padding: 0;
-  font-family: "DM Sans", "Helvetica";
+  font-family: "Noto Sans", "Helvetica";
   box-sizing: border-box;
 }
 
@@ -145,8 +145,8 @@ input:focus {
   justify-content: space-between;
   padding: 8px;
   height: 72px;
-  background-blend-mode: multiply;
-  background-image: linear-gradient(#aaaaaa, #aaaaaa);
+  background-blend-mode: overlay;
+  background-image: linear-gradient(#666666, #666666);
   background-color: var(--color-dark);
 }
 
@@ -228,8 +228,8 @@ input:focus {
   align-items: center;
   padding: 16px;
   height: 72px;
-  background-blend-mode: multiply;
-  background-image: linear-gradient(#ffffff, #ffffff);
+  background-blend-mode: overlay;
+  background-image: linear-gradient(#aaaaaa, #aaaaaa);
   background-color: var(--color-dark);
 }
 
@@ -237,8 +237,134 @@ input:focus {
   color: #f8f8f8;
 }
 
-.chat__messages {
+.chat__input {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px;
+  height: 70px;
+  background-color: #f8f8f8;
+}
+
+.chat__text {
   width: 100%;
-  height: 75%;
-  background-color: #dddddd;
+  color: #2f2d52;
+  font-size: 16px;
+}
+
+.chat__text::placeholder {
+  color: #dddddd;
+}
+
+.chat__image {
+  display: none;
+}
+
+.chat__options {
+  display: flex;
+  align-items: center;
+}
+
+.chat__attach {
+  padding: 4px;
+  height: 32px;
+  width: 32px;
+  color: #888888;
+  cursor: pointer;
+}
+
+.chat__send {
+  margin: 0 8px 0 16px;
+  padding: 8px 16px;
+  color: #f8f8f8;
+  background-blend-mode: overlay;
+  background-image: linear-gradient(#dddddd, #dddddd);
+  background-color: var(--color-dark);
+}
+
+/* message */
+
+.chat__messages {
+  padding: 8px 12px 8px 8px;
+  height: calc(100% - 142px);
+  background-blend-mode: overlay;
+  background-image: linear-gradient(#bbbbbb, #bbbbbb);
+  background-color: var(--color-light);
+  overflow-y: scroll;
+}
+
+.chat__messages::-webkit-scrollbar {
+  width: 12px;
+}
+
+.chat__messages::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.chat__messages::-webkit-scrollbar-thumb {
+  background-color: var(--color-dark);
+  border: 4px solid transparent;
+  border-radius: 8px;
+  background-clip: padding-box;
+}
+
+.chat__messages::-webkit-scrollbar-thumb:hover {
+  background-color: green;
+}
+
+.message {
+  display: flex;
+  gap: 16px;
+  margin-bottom: 16px;
+}
+
+.message__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.message__avatar {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.message__time {
+  font-size: 14px;
+  font-weight: 200;
+}
+
+.message__content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  max-width: 80%;
+}
+
+.message__text {
+  background-color: #f8f8f8;
+  padding: 8px 16px;
+  border-radius: 0 8px 8px 8px;
+}
+
+.message__image {
+  width: 50%;
+}
+
+.my {
+  flex-direction: row-reverse;
+}
+
+.my .message__content {
+  align-items: flex-end;
+}
+
+.my .message__text {
+  border-radius: 8px 0 8px 8px;
+  background-color: #8da4f1;
+  color: #f8f8f8;
 }
