--- a/src/App.css
+++ b/src/App.css
@@ -158,6 +158,9 @@ input:focus {
 
 .sidebar {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: var(--color-dark);
 }
 
@@ -182,7 +185,6 @@ input:focus {
 .sidebar__profile {
   display: flex;
   align-items: center;
-  padding: 8px;
 }
 
 .sidebar__avatar {
@@ -208,6 +210,23 @@ input:focus {
 
 .sidebar__search::placeholder {
   color: #f8f8f8;
+}
+
+.sidebar__bottom {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 70px;
+}
+
+.sidebar__logout {
+  margin: 0 16px;
+  padding: 8px 16px;
+  background-blend-mode: overlay;
+  background-image: linear-gradient(#aaaaaa, #aaaaaa);
+  background-color: var(--color-dark);
+  color: #f8f8f8;
+  font-size: 12px;
 }
 
 /* users */
