--- a/src/App.css
+++ b/src/App.css
@@ -16,17 +16,27 @@ button,
 input {
   border: none;
   background-color: transparent;
+  cursor: pointer;
+  transition: opacity 100ms;
 }
 
 button:hover,
 input:hover {
-  cursor: pointer;
+  opacity: 0.8;
 }
 
 button:focus,
 input:focus {
   outline: none;
   outline-color: transparent;
+}
+
+.click {
+  transition: scale 100ms;
+}
+
+.click:hover {
+  scale: 1.2;
 }
 
 /* sign */
@@ -49,7 +59,6 @@ input:focus {
   padding: 16px;
   background-color: #f8f8f8;
   border-radius: 16px;
-  /* box-shadow: 0 0 2px 2px #00000022; */
 }
 
 .sign__title {
@@ -106,6 +115,7 @@ input:focus {
 
 .sign__add {
   font-size: 14px;
+  cursor: pointer;
 }
 
 .sign__submit {
@@ -219,12 +229,12 @@ input:focus {
 
 .sidebar__bottom {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   height: 70px;
 }
 
-.sidebar__logout {
+.sidebar__signout {
   margin: 0 16px;
   padding: 8px 16px;
   background-blend-mode: overlay;
@@ -240,13 +250,13 @@ input:focus {
   display: flex;
   align-items: center;
   padding: 8px;
+  cursor: pointer;
 }
 
 .user:hover {
   background-blend-mode: overlay;
   background-image: linear-gradient(#666666, #666666);
   background-color: var(--color-dark);
-  cursor: pointer;
 }
 
 .user__avatar {
@@ -268,6 +278,29 @@ input:focus {
 
 .user__message {
   font-size: 14px;
+}
+
+/* slider */
+
+.slider {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 16px;
+  height: 16px;
+  background: #f8f8f8;
+  border-radius: 8px;
+  opacity: 0.8;
+  transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: var(--color-light);
+  cursor: pointer;
 }
 
 /* chat */
