--- a/src/App.css
+++ b/src/App.css
@@ -102,12 +102,19 @@ input:focus {
 
 .sign__label {
   display: flex;
-  align-items: center;
-  color: var(--color-light);
+  justify-content: space-between;
+  padding: 0 16px;
+  width: 100%;
 }
 
 .sign__attach {
-  margin: 8px 8px 8px 16px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: var(--color-light);
+}
+
+.sign__icon {
   height: 32px;
   width: 32px;
   cursor: pointer;
@@ -116,6 +123,14 @@ input:focus {
 .sign__add {
   font-size: 14px;
   cursor: pointer;
+}
+
+.sign__file {
+  padding: 4px;
+  width: 64px;
+  height: 64px;
+  background-color: #eee;
+  border-radius: 50%;
 }
 
 .sign__submit {
