--- a/src/App.css
+++ b/src/App.css
@@ -8,35 +8,29 @@
 }
 
 :root {
-  --color-light: #d3bff2;
-  --color-dark: #665580;
+  --color-light: #ffa69e;
+  --color-dark: #ff686b;
 }
 
 button,
 input {
   border: none;
+  outline: none;
   background-color: transparent;
   cursor: pointer;
-  transition: opacity 100ms;
+  transition: opacity 150ms;
 }
 
-button:hover,
-input:hover {
+button:hover {
   opacity: 0.8;
 }
 
-button:focus,
-input:focus {
-  outline: none;
-  outline-color: transparent;
-}
-
 .click {
-  transition: scale 100ms;
+  transition: scale 150ms;
 }
 
 .click:hover {
-  scale: 1.2;
+  scale: 1.1;
 }
 
 /* sign */
@@ -63,7 +57,7 @@ input:focus {
 
 .sign__title {
   padding: 4px;
-  color: #665580;
+  color: var(--color-dark);
   font-size: 48px;
 }
 
@@ -78,8 +72,12 @@ input:focus {
   align-items: flex-start;
 }
 
+.sign__box {
+  padding: 6px;
+}
+
 .sign__input {
-  margin: 8px;
+  margin: 2px 0;
   padding: 8px;
   width: 240px;
   border: none;
@@ -94,6 +92,11 @@ input:focus {
 
 .sign__input:focus {
   border-bottom-color: var(--color-dark);
+}
+
+.sign__error {
+  font-size: 12px;
+  color: #ff3333;
 }
 
 .sign__avatar {
@@ -111,6 +114,7 @@ input:focus {
   display: flex;
   align-items: center;
   gap: 8px;
+  padding: 8px 0;
   color: var(--color-light);
 }
 
@@ -129,8 +133,13 @@ input:focus {
   padding: 4px;
   width: 64px;
   height: 64px;
-  background-color: #eee;
   border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 100ms;
+}
+
+.sign__file:hover {
+  background-color: #f2f2f2;
 }
 
 .sign__submit {
@@ -150,6 +159,7 @@ input:focus {
 }
 
 .sign__sign {
+  color: var(--color-dark);
   text-decoration: none;
 }
 
@@ -246,7 +256,7 @@ input:focus {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 70px;
+  height: 56px;
 }
 
 .sidebar__signout {
@@ -343,12 +353,14 @@ input:focus {
   align-items: center;
   justify-content: center;
   padding: 8px;
-  height: 70px;
+  height: 56px;
   background-color: #f8f8f8;
 }
 
 .chat__text {
+  height: 56px;
   width: 100%;
+  padding: 0 4px;
   color: #2f2d52;
   font-size: 16px;
 }
@@ -383,11 +395,15 @@ input:focus {
   background-color: var(--color-dark);
 }
 
+.chat__send:hover {
+  opacity: 0.8;
+}
+
 /* message */
 
 .chat__messages {
   padding: 8px 12px 8px 8px;
-  height: calc(100% - 142px);
+  height: calc(100% - 128px);
   background-blend-mode: overlay;
   background-image: linear-gradient(#bbbbbb, #bbbbbb);
   background-color: var(--color-light);
@@ -403,20 +419,21 @@ input:focus {
 }
 
 .chat__messages::-webkit-scrollbar-thumb {
-  background-color: var(--color-dark);
+  background-color: var(--color-light);
   border: 4px solid transparent;
   border-radius: 8px;
   background-clip: padding-box;
 }
 
 .chat__messages::-webkit-scrollbar-thumb:hover {
-  background-color: green;
+  background-color: var(--color-dark);
 }
 
 .message {
   display: flex;
+  align-items: center;
   gap: 16px;
-  margin-bottom: 16px;
+  margin-top: 8px;
 }
 
 .message__info {
@@ -467,6 +484,6 @@ input:focus {
 
 .my .message__text {
   border-radius: 8px 0 8px 8px;
-  background-color: #8da4f1;
+  background-color: var(--color-light);
   color: #f8f8f8;
 }
